--- a/app/src/main/res/layout/activity_main_logging.xml
+++ b/app/src/main/res/layout/activity_main_logging.xml
@@ -8,9 +8,10 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainLoggingActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <Chronometer
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/chronometer"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
