Convert History to ListActivity, made basic layout

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -8,9 +8,40 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="edu.erau.mad.trb.flightdatarecorder.HistoryActivity">
 
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
+<!--
+    <LinearLayout
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Nope"
+            android:src="@drawable/ic_action_locate"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nothing to see here..."
+            android:textSize="@dimen/abc_text_size_medium_material"/>
+
+    </LinearLayout>
+-->
+
     <TextView
-        android:text="@string/hello_world"
+        android:id="@android:id/empty"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:drawableTop="@drawable/ic_action_locate"
+        android:text="Nothing to see here..."
+        android:textSize="@dimen/abc_text_size_medium_material"/>
 
 </RelativeLayout>
