--- a/app/src/main/res/layout/activity_main_logging.xml
+++ b/app/src/main/res/layout/activity_main_logging.xml
@@ -8,46 +8,12 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainLoggingActivity">
 
-    <Chronometer
-        android:id="@+id/timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
     <Button
         android:id="@+id/history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/timer"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:text="History!"
         android:onClick="goToHistory"/>
-    <Button
-        android:id="@+id/reset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/history"
-        android:layout_centerHorizontal="true"
-        android:text="reset"
-        android:onClick="resetTimer"/>
-
-    <Button
-        android:id="@+id/start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/history"
-        android:layout_toLeftOf="@id/reset"
-        android:text="@string/start"
-        android:onClick="startTimer"/>
-
-    <Button
-        android:id="@+id/stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/history"
-        android:layout_toRightOf="@id/reset"
-        android:text="@string/stop"
-        android:onClick="stopTimer"/>
-
 
 </RelativeLayout>
