--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:drawableTop="@drawable/ic_action_locate"
-        android:text="Nothing to see here..."
+        android:text="@string/noHistory"
         android:textSize="@dimen/abc_text_size_medium_material"/>
 
 </RelativeLayout>
