Add real menu to History

--- a/app/src/main/res/menu/menu_history.xml
+++ b/app/src/main/res/menu/menu_history.xml
@@ -2,8 +2,19 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="edu.erau.mad.trb.flightdatarecorder.HistoryActivity">
-    <item android:id="@+id/action_settings"
+<!--    <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
-          app:showAsAction="never"/>
+          app:showAsAction="never"/>-->
+
+    <item android:id="@+id/action_export"
+          android:icon="@drawable/ic_action_send_now"
+          android:title="@string/action_export"
+          app:showAsAction="ifRoom|withText" />
+
+    <!--TODO menu item for "delete some"-->
+
+    <item android:id="@+id/action_delete_all"
+          android:title="@string/action_delete_all"
+          app:showAsAction="never" />
 </menu>
