--- a/app/src/main/res/layout-land/activity_main_logging.xml
+++ b/app/src/main/res/layout-land/activity_main_logging.xml
@@ -1,35 +1,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainLoggingActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              tools:context=".MainLoggingActivity">
 
-    <TextView
-        android:id="@+id/clock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/zeroTime"
-        android:textSize="60dp"
-        tools:ignore="SpUsage"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="50"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/clock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/zeroTime"
+            android:textSize="60dp"
+            tools:ignore="SpUsage"/>
 
-    <ToggleButton
-        android:id="@+id/startStopButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textOn="@string/stop"
-        android:textOff="@string/start"
-        android:textSize="@dimen/abc_text_size_medium_material"/>
+        <ToggleButton
+            android:id="@+id/startStopButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textOn="@string/stop"
+            android:textOff="@string/start"
+            android:textSize="@dimen/abc_text_size_medium_material"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/viewHistory"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:onClick="goToHistory"/>
+    </LinearLayout>
 
     <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="50"
         android:gravity="center">
 
         <TableRow>
@@ -99,14 +120,5 @@
         </TableRow>
 
     </TableLayout>
-
-    <Button
-        android:id="@+id/history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/viewHistory"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:onClick="goToHistory"/>
 
 </LinearLayout>
