--- a/app/src/main/res/menu/menu_main_logging.xml
+++ b/app/src/main/res/menu/menu_main_logging.xml
@@ -6,4 +6,5 @@
           android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+    <!--TODO Delete menu_main_logging.xml if not needed-->
 </menu>
