--- a/app/src/main/res/layout-land/activity_main_logging.xml
+++ b/app/src/main/res/layout-land/activity_main_logging.xml
@@ -7,7 +7,8 @@
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context=".MainLoggingActivity">
+              tools:context=".MainLoggingActivity"
+              tools:ignore="RtlHardcoded,RtlSymmetry">
 
     <LinearLayout
         android:layout_width="0dp"
