--- a/app/src/main/res/menu/menu_history.xml
+++ b/app/src/main/res/menu/menu_history.xml
@@ -7,12 +7,10 @@
           android:orderInCategory="100"
           app:showAsAction="never"/>-->
 
-    <item android:id="@+id/action_export"
+<!--    <item android:id="@+id/action_export"
           android:icon="@drawable/ic_action_send_now"
           android:title="@string/action_export"
-          app:showAsAction="ifRoom|withText" />
-
-    <!--TODO menu item for "delete some"-->
+          app:showAsAction="ifRoom|withText" />-->
 
     <item android:id="@+id/action_delete_all"
           android:title="@string/action_delete_all"
